fix(dialog.scss): fix position of peusedo element
border is not visible when opening dark dialog

--- a/demo/style.css
+++ b/demo/style.css
@@ -147,8 +147,8 @@ div.containers > .nes-container {
   bottom: -4px;
 }
 
-#dialogs > section + section {
-  margin-top: 1.5rem;
+#dialogs > section {
+  display: inline-block;
 }
 
 #dialogs .dialog-menu {
